--- a/final.css
+++ b/final.css
@@ -9,8 +9,6 @@
     font-style: normal;     
 }
 
-
-
 body {
     width: 100%;
     overflow-x: hidden; 
@@ -22,24 +20,15 @@ body {
     color: #000;       
 }
 
-
-
-@media screen and (max-width: 1320px) {
-    
-}
-   
-
-
 .header__menu {
     position: fixed;
-    z-index: 1040;
+    z-index: 20;
     width: 100%;
     top: 0;
     left: 0;
     background-color: #181818;
     overflow: hidden;
 }
-
 
 .navig {
     position: relative;
@@ -48,7 +37,7 @@ body {
     align-items: center;
     z-index: 3;
     padding: 10px 45px;
-    height: 94px;
+    height: 90px;
 }
 
 .logotip {
@@ -62,8 +51,7 @@ body {
     flex-direction: row;
     height: fit-content;
     justify-content: flex-start;
-    overflow: hidden;
-    
+    overflow: hidden;    
 }
 
 .css-1akagq8 {
@@ -99,11 +87,104 @@ body {
     fill: rgb(238, 228, 96);
 }
 
-.menu-burger__header {
-    display: none;
+#nav-icon3 {
+    position: absolute;
+    
 }
 
-
+@media screen and (max-width: 1120px) {
+    .search {
+        display: none;
+        transition: .4s ease;
+    }
+    .header__menu {
+        position: fixed;
+    }
+    .css-1akagq8 {
+        font-weight: 500;
+        font-size: 20px;
+        width: 100px;
+        height: 50px;
+    }
+    .css-1akagq8 {
+        height: 200px;;
+    }
+    .navig {
+        height: 220px;
+        align-items: flex-start;
+    }
+    .navig__menu {
+        position: absolute;
+        top: 0;
+	    left: 0;
+	    width: 100%;
+	    height: 100vh;
+	    padding: 15px;        
+	    transform: translateX(-100%);
+	    transition: transform 0.5s; 
+        margin: 100px 5%;
+        z-index: 100;       
+    }
+    .navig__menu.active {
+        transform: translateX(0);       
+        width: 100%;
+	    height: 1000px;
+        z-index: 100;
+        font-weight: 300;
+        font-size: 10px;
+    }    
+    #nav-icon3 {
+        margin-top: 10px;
+        width: 60px;
+        height: 45px;
+        position: relative;        
+        transform: rotate(0deg);
+        transition: .5s ease-in-out;
+        cursor: pointer;
+        z-index: 50;
+    }
+    #nav-icon3 span {
+        display: block;
+        position: absolute;
+        height: 9px;
+        width: 100%;
+        background: #fff;
+        border-radius: 9px;
+        opacity: 1;
+        left: 0;
+        transform: rotate(0deg);
+        transition: .25s ease-in-out;
+    }
+    #nav-icon3 span:nth-child(1) {
+        top: 0px;
+    }
+    #nav-icon3 span:nth-child(2),
+    #nav-icon3 span:nth-child(3) {
+        top: 18px;
+    }
+    #nav-icon3 span:nth-child(4) {
+        top: 36px;
+    }
+    #nav-icon3.open span:nth-child(1) {
+        top: 18px;
+        width: 0%;
+        left: 50%;
+    }
+    #nav-icon3.open span:nth-child(2) {
+        transform: rotate(45deg);
+    }
+    #nav-icon3.open span:nth-child(3) {
+        transform: rotate(-45deg);
+    }
+    #nav-icon3.open span:nth-child(4) {
+        top: 18px;
+        width: 0%;
+        left: 50%;
+    }
+    .section_1 {
+        padding-top: 150px;
+    }    
+}
 
 .swiper {
     width: 100%;
@@ -127,6 +208,7 @@ body {
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .swiper-slide img {
@@ -138,16 +220,28 @@ body {
 
 .heading {
     position: absolute;
-    bottom: 30px;
-    left: 50px;
+    bottom: 100px;
+    left: 60px;
     color: #fff;
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
     font-weight: 800;
     font-size: 50px; 
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.568);
-    opacity: 0.6;
+    opacity: 0.9;
+    animation: slideUp 1s forwards;    
+    transform: translateY(200px 150%);        
+    animation-delay: 0s;
 }
+
+@keyframes slideUp {
+    0% {
+      transform: translateY(150%);
+    }
+    100% {
+      transform: translateY(0%);
+    }
+  }
 
 .heading2 {
     position: absolute;
@@ -159,6 +253,9 @@ body {
     font-weight: 500;
     font-size: 40px; 
     text-shadow: 10px 1px 5px rgba(0, 0, 0, 0.589); 
+    animation: slideUp 1s forwards;    
+    transform: translateY(150%);        
+    animation-delay: 0s;
 }
 
 .swiper-slider {
@@ -204,7 +301,7 @@ body {
 
 .button_models {
     position: absolute;
-    top: 300px;
+    bottom: 50px;
     left: 50px;
     color: #fff;
     border: 1px 1px #fff;
@@ -212,8 +309,8 @@ body {
 
 .icon_slider {
     position: absolute;
-    top: 590px;
-    left: 0;    
+    bottom: 50px;
+    left: 50;    
     height: 66px;
     width: 58px;
     stroke: #fff;
@@ -223,7 +320,7 @@ body {
 
 .tittle_button {
     position: absolute;
-    top: 600px;
+    bottom: 60px;
     left: 70px;
     color: #fff;
     text-transform: uppercase;
@@ -240,14 +337,37 @@ body {
     background: #fff;
 }
 
+.section_3 span {
+    color: #181818;
+}
+
 .configurate {
     position: relative;
+    width: 100%;
+    height: 706px;        
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 50px;
+    background: url(../finalproject/img/img/mode_chooser_home_urus_s.webp); 
+    background-size: cover;
+    background-position: center center;
+}
+
+.configurate_dubl {
+    position: relative;
+    width: 100%;
+    height: 706px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 50px;
+    background: url(../finalproject/img/img/model_chooser_tecnica.webp); 
+    background-size: cover;
+    background-position: center center;
 }
 
 .tittle1_section3 {
-    position: absolute;
-    top: 0;
-    left: 40px;
     color: #181818;
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
@@ -257,10 +377,7 @@ body {
     opacity: 0.85;
 }
 
-.tittle2_section3 {
-    position: absolute;
-    top: 90px;
-    left: 40px;
+.tittle2_section3 {    
     color: #181818;
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
@@ -277,6 +394,8 @@ body {
     z-index: -1;
     width: 100%;
     height: 1200px;
+    background-size: cover;
+    background-position: center center;
 }
 
 .configurate4 {
@@ -306,7 +425,25 @@ body {
     justify-content: center;
     align-items: center;
     background: #fff;    
-    width: 100%;    
+    width: 100%;  
+    background-size: cover;
+    background-position: center center;  
+}
+
+.configurate5 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 80px;
+        
+}
+
+.configurate5 img {
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    
 }
 
 .tittle1_section5 {
@@ -326,10 +463,35 @@ body {
 }
 
 .tittle3_section5 {
-    margin: 50px 0 0;
+    margin: 35px 0;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 20px;
+}
+
+.button_news_huracan {
+    width: 100px;
+    height: 50px;    
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 25px;
+    padding-bottom: 25px;
+    text-transform: uppercase;       
+    cursor: pointer;
+    text-decoration: none;
+    color: #000;
+}
+
+.button_news {
+    margin: 20px 50px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    text-transform: uppercase;
+    padding: 5px;    
+    cursor: pointer;    
+    text-decoration: none;
+    color: #000;
 }
 
 .buttonnews {
@@ -338,13 +500,10 @@ body {
     font-weight: 500;
     font-size: 15px;
     text-transform: uppercase;
-    padding: 5px;
-    border: none;
+    padding: 5px;    
     cursor: pointer;
-}
-
-.buttonnews:hover {
-    background: #1818186c;
+    text-decoration: none;
+    color: #000;
 }
 
 .configurate5_1 {
@@ -383,9 +542,7 @@ body {
     background: #fff;    
     max-width: 1500px;
     margin-left: 150px;
-    padding: 30px;
-    
-            
+    padding: 30px;                
 }
 
 .section_news_1 {
@@ -399,9 +556,10 @@ body {
 }
 
 .img_news {
-    width: 585px;
-    height: 260px;
-
+    max-width: 585px;
+    max-height: 260px;
+    background-size: cover;
+    background-position: center center;
 }
 
 .configurate6_1 {
@@ -420,10 +578,10 @@ body {
     padding: 10px;
     border: none;
     cursor: pointer;
+    background:  rgba(0, 0, 0, 0.089);
 }
 
-.button_news_1 {
-    text-decoration: none;
+.button_news_1 {    
     color: #000; 
 }
 
@@ -439,6 +597,8 @@ body {
 }
 
 .button_newsall {
+    text-decoration: none;
+    color: #000;
     margin: 50px 40%; 
 }
 
@@ -469,9 +629,7 @@ body {
     align-items: center;
     background-color: #181818;
     color: #fff;
-    padding: 40px;
-    
-    
+    padding: 40px;   
 }
 
 .socialnetworkicon {
