--- a/personal.css
+++ b/personal.css
@@ -12,6 +12,7 @@
 html {
     scroll-behavior: smooth;
 }
+
 body {
     width: 100%;
     overflow-x: hidden; 
@@ -75,6 +76,62 @@ body {
     color: rgb(238, 228, 96);    
 }
 
+form {
+    position: relative;
+    width: 300px;
+    margin: 0 auto;
+    height: 42px;
+}
+
+input {
+    height: 42px;
+    width: 0;
+    padding: 0 42px 0 15px;
+    border: none;
+    border-bottom: 2px solid transparent;
+    outline: none;
+    background: transparent;
+    transition: .4s cubic-bezier(0, 0.8, 0, 1);
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    cursor: pointer;  
+}
+
+input:focus {
+    width: 300px;
+    z-index: 1;
+    border-bottom: 2px solid #F9F0DA;
+    color: #fff;  
+}
+
+.search__butt {
+    background: #181818;
+    fill: #fff;
+    border: none;
+    height: 42px;
+    width: 42px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: opacity 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.search__butt__icon {
+    width: 25px;
+    height: 25px;
+}
+
+.search__butt:before {
+    content: "";
+    font-family: FontAwesome;
+    font-size: 16px;
+    color: #F9F0DA;
+    opacity: 1;  
+}
+
 .personalhover {
     color: rgb(238, 228, 96);
 }
@@ -94,8 +151,7 @@ body {
 }
 
 #nav-icon3 {
-    position: absolute;
-    
+    position: absolute;    
 }
 
 @media screen and (max-width: 1120px) {
@@ -216,8 +272,7 @@ body {
     width: 100%;
     height: 1200px;
     background-size: cover;
-    background-position: center center;
-    
+    background-position: center center;    
 }
 
 .configurate4 {
@@ -346,6 +401,7 @@ body {
     margin: 150px 0 0 50px;
     z-index: 20;      
 }
+
 .configurate2 {    
     position: relative;
     overflow: hidden;          
@@ -366,7 +422,7 @@ body {
     z-index: 3;
 }
 
- .configurate2::before {
+.configurate2::before {
     content: '';
     width: 0;
     height: 0;
@@ -378,14 +434,14 @@ body {
     bottom: 0;
     left: 20px;
     z-index: 4;
- }
+}
 
- .imgposition img {
+.imgposition img {
     width: 100%;    
     overflow: hidden;
- }
+}
 
- .configurate3_1 {
+.configurate3_1 {
     position: relative;
     background-size: cover;
     background-position: center center;
@@ -395,7 +451,7 @@ body {
     z-index: 1; 
 }
 
- .configurate3::after {
+.configurate3::after {
     content: '';
     width: 0;
     height: 0;
@@ -407,9 +463,9 @@ body {
     bottom: 0;
     left: 0;
     z-index: 2;
- }
+}
 
- .configurate3::before {
+.configurate3::before {
     content: '';
     width: 0;
     height: 0;
@@ -421,9 +477,9 @@ body {
     bottom: 0;
     right: 0;
     z-index: 2;
- }
+}
 
- .configurate1_1 {
+.configurate1_1 {
     display: flex;        
     z-index: 20;    
 }
@@ -432,7 +488,6 @@ body {
     position: relative;
     overflow: hidden;      
 }
-
    
 .configurate5_1 {
     position: relative;
@@ -471,9 +526,8 @@ body {
     right: -13px;
     z-index: 2;
 }
-
  
- .imgposition2 img {
+.imgposition2 img {
     width: 100%;
     overflow: hidden;
 }
@@ -511,7 +565,7 @@ body {
     bottom: -55px;
     left: 280px;
     z-index: 2;    
- }
+}
 
 .section_9 {    
     width: 100%;
@@ -523,7 +577,6 @@ body {
 .section_9 iframe {
     max-width: 1280px;
     max-height: 720px;
-
 }
 
 .footer {
