--- a/motorsport.css
+++ b/motorsport.css
@@ -13,16 +13,6 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
-    width: 100%;
-    overflow-x: hidden; 
-    position: relative;
-    background-color: #181818;
-    background: #fff;   
-    font-size: 14px;
-    color: #000;       
-}
-
 .header__menu {
     position: fixed;
     z-index: 99;
@@ -50,8 +40,7 @@ body {
 }
 
 .navig__menu {
-    display: flex;
-    flex-direction: row;
+    display: flex;    
     height: fit-content;
     justify-content: flex-start;
     overflow: hidden;    
@@ -102,7 +91,7 @@ input {
 input:focus {
     width: 300px;
     z-index: 1;
-    border-bottom: 2px solid #F9F0DA;
+    border-bottom: 2px solid #f9f0da;
     color: #fff;  
 }
 
@@ -128,7 +117,7 @@ input:focus {
     content: "";
     font-family: FontAwesome;
     font-size: 16px;
-    color: #F9F0DA;
+    color: #f9f0da;
     opacity: 1;  
 }
 
@@ -362,8 +351,7 @@ input:focus {
     margin-top: 20px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 900;
-    font-size: 110px;
-    text-transform: uppercase;
+    font-size: 110px;    
     text-transform: uppercase;    
     animation: slideUp 1s forwards;    
     transform: translateY(150%);        
@@ -422,25 +410,26 @@ input:focus {
     justify-content: space-around;    
 }
 
-.heading {
+.heading, .heading2 {
     margin-top: 25px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     font-size: 15px;
 }
 
-.heading2 {
-    margin-top: 25px;
-    font-family: 'Montserrat', sans-serif;
+.heading2 {    
     font-weight: 600;
     font-size: 20px;
 }
 
 .configurate1 {
     width: 500px;
-    margin: 20px;
-    z-index: 5;
+    margin: 20px;    
     overflow: hidden;
+    display: flex;
+    flex-direction: column;  
+    margin: 150px 0 0 50px;
+    z-index: 20;
 }
 
 .imgposition {
@@ -453,21 +442,14 @@ input:focus {
     align-items: flex-start;
 }
 
-.configurate1 {  
-    display: flex;
-    flex-direction: column;  
-    margin: 150px 0 0 50px;
-    z-index: 20;      
+.configurate1 img {
+    max-width: 470px;
+    max-height: 157px;         
 }
 
-.configurate2 {    
+.configurate2, .configurate3 {    
     position: relative;
     overflow: hidden;          
-}
-
-.configurate3 {    
-    position: relative;
-    overflow: hidden;      
 }
 
 .configurate2_1 {
@@ -693,4 +675,181 @@ input:focus {
 
 .linknet {
     color: #fff;
+}
+
+@media screen and (max-width: 1400px) {
+    .css-1akagq8 {
+        margin: 0 30px 0 10px;
+        font-weight: 400;
+        font-size: 20px;
+    }
+    .tittle2_section4 {                
+        font-weight: 500;
+        font-size: 50px;   
+    }
+    .section_9 iframe {
+        max-width: 1000px;
+        max-height: 520px;
+    } 
+    .news_wrap {
+        flex-direction: column;
+        align-items: center;        
+    } 
+    .heading3 {        
+        font-weight: 500;
+        font-size: 40px;
+    }   
+}
+
+@media screen and (max-width: 1250px) {
+    .configurate2::before, .configurate3::before, .configurate3::after, .configurate3::after, .configurate5::after, .configurate5::before, .configurate6::before {
+        display: none;       
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .tittle1_section4 {
+        margin-top: 80px;        
+        font-weight: 500;
+        font-size: 40px;        
+    }
+    .home {
+        text-align: center;        
+        font-weight: 400;
+        font-size: 15px;
+        margin-bottom: 10px;
+    }
+    .position {        
+        flex-direction: column;
+        justify-content: center;
+    } 
+    .configurate1_1 {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .configurate1 {
+        margin-top: 30px;
+    } 
+    .configurate6::before {
+        display: none;
+    }
+    .section_9 iframe {
+        max-width: 650px;
+        max-height: 250px;
+    }
+    .news_wrap {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0;        
+    }
+    .tittle_sponsors {
+        font-weight: 400;
+        font-size: 30px;
+    } 
+    .section_9_1 img {        
+        max-height: 95px;        
+    }   
+}
+
+@media screen and (max-width: 680px) {
+    .css-1akagq8 {
+        margin: 0 10px 0 10px;
+        font-weight: 200;
+        font-size: 15px;
+    }
+    .navig__menu {
+        margin-top: 100px;
+    }
+    .tittle1_section4 {
+        margin-top: 40px;        
+        font-weight: 400;
+        font-size: 30px;        
+    }     
+    .home {
+        text-align: center;        
+        font-weight: 400;
+        font-size: 15px;
+        margin-bottom: 10px;
+    } 
+    .cta-down {        
+        margin: 10px;        
+    }     
+    .configurate1 {
+        align-items: center;
+        margin: 0;               
+    }
+    .configurate1 img {
+        width: 290px; 
+        overflow: hidden;       
+    }
+    .heading {
+        width: 300px;
+        font-weight: 300;
+        font-size: 12px;
+    }
+    .heading2 {
+        width: 320px;
+        font-weight: 400;
+        font-size: 20px;
+    }  
+    .section_9 iframe {
+        max-width: 310px;
+        max-height: 110px;
+    }  
+    .img_news {
+        max-width: 320px;
+        max-height: 115px;        
+    }
+    .section_9_1 img {        
+        max-height: 95px;        
+    }
+    .tittle1_footer1 {
+        padding: 20px;
+        font-weight: 400;
+        font-size: 10px;
+    } 
+}
+
+@media screen and (max-width: 626px) {
+    .navig__menu {
+        display: flex;
+        flex-direction: column;
+        height: fit-content;
+        }
+    .navig__menu li {
+        margin-top: 5px;
+    }
+    .configurate4 {        
+        margin: 0;        
+    }
+    .tittle2_section4 {                
+        font-weight: 400;
+        font-size: 30px;   
+    }
+    .heading3 {
+        width: 300px;
+        font-weight: 500;
+        font-size: 20px;
+    }  
+    .configurate1_9 {
+        margin: 0;
+    } 
+    .section_9_1 img {        
+        max-width: 150px;
+        max-height: 45px;        
+    }
+    .section_9_1 {
+        flex-direction: column;
+    } 
+}
+
+@media screen and (max-width: 450px) {    
+    .configurate1 {       
+        align-items: flex-start;       
+    } 
+    .heading2 {
+        width: 320px;
+        font-weight: 400;
+        font-size: 15px;
+    }    
 }
