--- a/motorsport.css
+++ b/motorsport.css
@@ -247,6 +247,11 @@ input:focus {
     padding: 100px 0;                
 }
 
+.section_news {
+    display: flex;
+    flex-direction: column;
+}
+
 .head_news {
     text-align: center;    
     text-transform: uppercase;
@@ -267,7 +272,7 @@ input:focus {
 }
 
 .img_news {
-    max-width: 585px;
+    max-width: 100%;
     max-height: 260px;
     background-size: cover;
     background-position: center center;
@@ -615,6 +620,11 @@ input:focus {
     margin: 50px;
     width: 30%;
     z-index: 20;      
+}
+
+.section_9 {
+    display: flex;
+
 }
 
 .section_9_0 {    
